# ENISHI

./: .env.example  .gitignore  CodexFeedBack.md  LICENSING.md  README.md  package-lock.json  package.json  pyproject.toml  twinlink.md
apps/desktop/src-tauri/: Cargo.toml  tauri.bundle.conf.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
services/enishi-mcp/: pyproject.toml
services/enishi-mcp/enishi_mcp/: __init__.py  client.py  formatters.py  server.py
services/enishi-mcp/tests/: test_client_and_formatters.py  test_mcp_protocol.py
services/local-core/: alembic.ini  enishi-core.spec  pyproject.toml
services/local-core/alembic_migrations/: env.py
services/local-core/alembic_migrations/versions/: 202607120001_baseline.py  202607120002_disclosure_agreements.py  202607130001_agent_setup.py  202607130002_personal_agent_identity.py  202607130003_agent_decisions.py  202607180001_peer_capabilities.py  202607240001_memory_backend_router.py
services/local-core/enishi_core/: config.py  database.py  errors.py  main.py  mcp_server.py  sidecar.py
services/local-core/enishi_core/api/: deps.py  routes.py
services/local-core/enishi_core/models/: __init__.py  approval.py  audit.py  base.py  clone.py  context_package.py  identity.py  memory.py  metrics.py  negotiation.py  peer.py  policy.py  project.py  seen_message.py  task.py  user.py
services/local-core/enishi_core/protocol/: __init__.py  negotiation-message.schema.json
services/local-core/enishi_core/providers/: __init__.py  base.py  claude_code.py  codex.py  context_file.py  mock.py
services/local-core/enishi_core/schemas/: __init__.py
services/local-core/enishi_core/security/: __init__.py  envelope.py  keys.py  replay.py
services/local-core/enishi_core/services/: agent_requests.py  approvals.py  audit.py  clone_bootstrap.py  clones.py  context_builder.py  core_discovery.py  decision_evaluator.py  (+21 more)
services/local-core/tests/: conftest.py  test_agent_decisions.py  test_agent_requests.py  test_agent_setup.py  test_approvals.py  test_audit_api.py  test_auth.py  test_clone_bootstrap.py  test_clones.py  test_config.py  test_context_packages.py  test_database.py  test_external_memory.py  test_health.py  test_mcp_control_plane.py  test_mcp_server.py  test_memories.py  test_memory_router.py  test_metrics.py  test_negotiation.py  test_negotiation_phase6_policy.py  test_peers.py  test_projects.py  test_providers.py  test_relay_worker.py  test_scheduling.py  test_second_brain.py  test_security.py  test_tasks.py  test_users.py
services/local-core/twinlink_core/: __init__.py  config.py  database.py  errors.py  main.py
services/relay/: pyproject.toml
services/relay/relay/: __init__.py  config.py  database_tool.py  main.py  metrics.py  store.py  token_tool.py
services/relay/tests/: conftest.py  test_database_tool.py  test_deployment.py  test_relay.py
(+133 files in other folders)
