[project]
name = "enishi-mcp"
version = "0.1.0"
description = "Thin MCP control plane for ENISHI Local Core"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "mcp>=1.27,<2",
]

[project.scripts]
enishi-mcp = "enishi_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["enishi_mcp"]
