[project]
name = "enishi-core"
version = "0.1.0"
description = "ENISHI Local Core - 本人代理AIエージェント間の交渉・日程調整・協調を担うローカルバックエンド"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "cryptography>=43",
    "keyring>=25",
    "httpx>=0.27",
    "mcp>=1.27,<2",
]

[project.scripts]
enishi-memory-mcp = "enishi_core.mcp_server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
]
distribution = [
    "pyinstaller>=6.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["enishi_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
